--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-body{
-  background: #0D0714;
+
+
+body {
+  background-color: #0D0714;
 }
